qgis (1.7.0) UNRELEASED; urgency=low

  * new development version 1.7 after branch
  * add qgis-sqlanywhere1.7.0 package
  * add road graph plugin
  * drop quickprint and ogrconverter plugin
  * add gdal provider
  * turn qgis-providers-common's architecture to all
  * Missing ${python:Depends} added to python-qgis dependencies
    (closes: #611492)
  * move qgis_help to /usr/lib/qgis (closes: #615833)

 -- Jürgen E. Fischer <jef@norbit.de>  Tue, 08 Mar 2011 23:24:24 +0100

qgis (1.6.0) UNRELEASED; urgency=low

  * new development version 1.6 after branch
  * qgis-plugin-grass-common breaks earlier versions of qgis-common: add
    control fields.
  * include displacementplugin and offline editing plugin
  * add subversion as build dependency for trunk
  * add qgis-mapserver package
  * trim dependencies
 
 -- Jürgen E. Fischer <jef@norbit.de>  Sun, 17 Oct 2010 12:09:23 +0200

qgis (1.5.0) UNRELEASED; urgency=low

  * new development version 1.5 after branch
  * adapted Francesco Paolo Lovergine's updates to Debian qgis 1.4 package
  * require CMake >2.6 and Qt 4.4
  * remove circular dependencies
  * integrate new GRASS raster provider and remove dependency to
    libgdal1-$VERSION-grass
  * add spatialquery plugin
  * include qgis.g.browser in grass plugin
  * drop symbol tracking as C++ ABIs change too frequently
  * exclude python scripts from grass plugin on lenny
  * add missing dependency to python-sip(4) to python-qgis
  * follow sip4 => sip transition
  * add gdal-bin and python-gdal dependency for GdalTools
  * trim build dependencies

 -- Jürgen E. Fischer <jef@norbit.de>  Wed, 23 Jun 2010 18:34:25 +0200

qgis (1.4.0) UNRELEASED; urgency=low

  * new development version after 1.3 branch
  * use templates for configuration for ABIs and distributions
  * policy updated to 3.8.3
  * remove README.Debian from libqgis-dev
  * add symbol files for shared libraries
  * shorten qgis.sh
  * add all python files in qgis' site-packages
  * add labeling plugin
